try ayouub trick

--- a/.github/workflows/concrete_python_tests_linux.yml
+++ b/.github/workflows/concrete_python_tests_linux.yml
@@ -61,7 +61,7 @@ jobs:
             rustup toolchain install nightly-2024-09-30
             dnf -y install graphviz graphviz-devel
 
-            rm -rf /build/*
+            rm -rf /build
 
             cd /concrete/frontends/concrete-python
             make venv
