--- a/.github/workflows/concrete_python_tests_linux.yml
+++ b/.github/workflows/concrete_python_tests_linux.yml
@@ -71,9 +71,9 @@ jobs:
             echo "Debug: ccache statistics (after the build):"
             ccache -s
 
-            mkdir -p /artifacts/lib && cp ./build/lib/libConcretelangRuntime.so /artifacts/lib/
+            mkdir -p /artifacts/lib && cp .build/lib/libConcretelangRuntime.so /artifacts/lib/
             mkdir -p /artifacts/tools/concretelang/python_packages/concretelang_core/
-            cp -R ./build/tools/concretelang/python_packages/concretelang_core/* /artifacts/tools/concretelang/python_packages/concretelang_core/
+            cp -R /build/tools/concretelang/python_packages/concretelang_core/* /artifacts/tools/concretelang/python_packages/concretelang_core/
       - name: Upload concrete-compiler python-bindings
         uses: actions/upload-artifact@50769540e7f4bd5e21e526ee35c689e35e0d6874 # v4.4.0
         with:
