--- a/.github/workflows/concrete_python_tests_linux.yml
+++ b/.github/workflows/concrete_python_tests_linux.yml
@@ -111,37 +111,37 @@ jobs:
             export KEY_CACHE_DIRECTORY=./key-set-cache
             mkdir $KEY_CACHE_DIRECTORY
             make pytest
-  concrete-python-test-notebooks:
-    name: Test concrete-python notebooks
-    needs: [setup-instance, concrete-compiler-build-python-bindings]
-    runs-on: ${{ needs.setup-instance.outputs.runner-name }}
-    steps:
-      - name: Download concrete-compiler python-bindings
-        uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
-        with:
-          name: concrete-compiler-python-bindings
-          path: /compiler-artifacts-notebooks
-      - name: Run pytest
-        uses: addnab/docker-run-action@4f65fabd2431ebc8d299f8e5a018d79a769ae185 # v3
-        with:
-          registry: ghcr.io
-          image: ${{ env.DOCKER_IMAGE_TEST }}
-          username: ${{ secrets.GHCR_LOGIN }}
-          password: ${{ secrets.GHCR_PASSWORD }}
-          options: >-
-            -v ${{ github.workspace }}:/concrete
-            -v ${{ github.workspace }}/build:/build
-          shell: bash
-          run: |
-            set -e
-            export COMPILER_BUILD_DIRECTORY=/compiler-artifacts-notebooks
-            cd /concrete/frontends/concrete-python
-            source .venv/bin/activate
-            make test-notebooks
+  # concrete-python-test-notebooks:
+  #   name: Test concrete-python notebooks
+  #   needs: [setup-instance, concrete-compiler-build-python-bindings]
+  #   runs-on: ${{ needs.setup-instance.outputs.runner-name }}
+  #   steps:
+  #     - name: Download concrete-compiler python-bindings
+  #       uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
+  #       with:
+  #         name: concrete-compiler-python-bindings
+  #         path: /compiler-artifacts-notebooks
+  #     - name: Run pytest
+  #       uses: addnab/docker-run-action@4f65fabd2431ebc8d299f8e5a018d79a769ae185 # v3
+  #       with:
+  #         registry: ghcr.io
+  #         image: ${{ env.DOCKER_IMAGE_TEST }}
+  #         username: ${{ secrets.GHCR_LOGIN }}
+  #         password: ${{ secrets.GHCR_PASSWORD }}
+  #         options: >-
+  #           -v ${{ github.workspace }}:/concrete
+  #           -v ${{ github.workspace }}/build:/build
+  #         shell: bash
+  #         run: |
+  #           set -e
+  #           export COMPILER_BUILD_DIRECTORY=/compiler-artifacts-notebooks
+  #           cd /concrete/frontends/concrete-python
+  #           source .venv/bin/activate
+  #           make test-notebooks
   teardown-instance:
     name: Teardown instance
     if: ${{ always() && needs.setup-instance.result != 'skipped' }}
-    needs: [ setup-instance, concrete-python-test-pytest, concrete-python-test-notebooks ]
+    needs: [ setup-instance, concrete-python-test-pytest ] #, concrete-python-test-notebooks ]
     runs-on: ubuntu-latest
     steps:
       - name: Stop instance
