--- a/.github/workflows/compiler_build_and_test_cpu.yml
+++ b/.github/workflows/compiler_build_and_test_cpu.yml
@@ -81,6 +81,7 @@ jobs:
           shell: bash
           run: |
             rustup toolchain install nightly-2024-09-30
+            pip install mypy
             set -e
             cd /concrete/compilers/concrete-compiler/compiler
             rm -rf /build/*
@@ -137,6 +138,7 @@ jobs:
             rustup toolchain install nightly-2024-09-30
             cd /concrete/compilers/concrete-compiler/compiler
             pip install pytest
+            pip install mypy
             dnf install -y libzstd libzstd-devel
             sed "s/pytest/python -m pytest/g" -i Makefile
             mkdir -p /tmp/concrete_compiler/gpu_tests/
