--- a/.github/workflows/compiler_build_and_test_gpu.yml
+++ b/.github/workflows/compiler_build_and_test_gpu.yml
@@ -81,6 +81,7 @@ jobs:
           shell: bash
           run: |
             rustup toolchain install nightly-2024-09-30
+            pip install mypy
             set -e
             cd /concrete/compilers/concrete-compiler/compiler
             rm -rf /build/*
