--- a/.github/workflows/concrete_python_tests_linux.yml
+++ b/.github/workflows/concrete_python_tests_linux.yml
@@ -77,6 +77,7 @@ jobs:
           shell: bash
           run: |
             rustup toolchain install nightly-2024-09-30
+            pip install mypy
             set -e
             rm -rf /build/*
 
