--- a/frontends/concrete-python/examples/tfhers-cml/Cargo.toml
+++ b/frontends/concrete-python/examples/tfhers-cml/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 [dependencies]
 bincode = "1.3.3"
 rand = "0.8"
+serde = "1.0.210"
+serde_json = "1.0.128"
 
 tfhe = { git = "https://github.com/zama-ai/tfhe-rs.git", rev = "cfb9532f6336c7e8fec754d2dbe2e1195b9c0de7", features = ["integer"] }
 
