--- a/frontends/concrete-python/examples/tfhers-cml/Cargo.toml
+++ b/frontends/concrete-python/examples/tfhers-cml/Cargo.toml
@@ -8,13 +8,16 @@ rand = "0.8"
 serde = "1.0.210"
 serde_json = "1.0.128"
 
-tfhe = { git = "https://github.com/zama-ai/tfhe-rs.git", rev = "cfb9532f6336c7e8fec754d2dbe2e1195b9c0de7", features = ["integer"] }
+tfhe = { version = "0.7.1", features = ["integer"] }
+
+[target.aarch64-apple-darwin.dependencies]
+tfhe = { version = "0.7.1", features = ["integer", "aarch64-unix"] }
 
 [target.x86_64-unknown-linux-gnu.dependencies]
-tfhe = { git = "https://github.com/zama-ai/tfhe-rs.git", rev = "cfb9532f6336c7e8fec754d2dbe2e1195b9c0de7", features = ["integer", "x86_64-unix"] }
+tfhe = { version = "0.7.1", features = ["integer", "x86_64-unix"] }
 
 [target.aarch64-unknown-linux-gnu.dependencies]
-tfhe = { git = "https://github.com/zama-ai/tfhe-rs.git", rev = "cfb9532f6336c7e8fec754d2dbe2e1195b9c0de7", features = ["integer", "aarch64-unix"] }
+tfhe = { version = "0.7.1", features = ["integer", "aarch64-unix"] }
 
 [target.x86_64-pc-windows-gnu.dependencies]
-tfhe = { git = "https://github.com/zama-ai/tfhe-rs.git", rev = "cfb9532f6336c7e8fec754d2dbe2e1195b9c0de7", features = ["integer", "x86_64"] }
+tfhe = { version = "0.7.1", features = ["integer", "x86_64"] }
