--- a/frontends/concrete-python/tests/tfhers-utils/Cargo.toml
+++ b/frontends/concrete-python/tests/tfhers-utils/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 [dependencies]
 
 bincode = "1.3.3"
+serde = "1"
+
 clap = { version = "4.5.16", features = ["derive"] }
 
 tfhe = { version = "0.8.0", features = ["integer"] }
