--- a/frontends/concrete-python/tests/tfhers-utils/Cargo.toml
+++ b/frontends/concrete-python/tests/tfhers-utils/Cargo.toml
@@ -6,15 +6,17 @@ edition = "2021"
 [dependencies]
 
 bincode = "1.3.3"
+serde = "1"
+
 clap = { version = "4.5.16", features = ["derive"] }
 
-tfhe = { version = "0.8.0", features = ["integer"] }
+tfhe = { git = "https://github.com/zama-ai/tfhe-rs.git", rev = "483a4fe", features = ["integer"] }
 
 [target.x86_64-unknown-linux-gnu.dependencies]
-tfhe = { version = "0.8.0", features = ["integer", "x86_64-unix"] }
+tfhe = { git = "https://github.com/zama-ai/tfhe-rs.git", rev = "483a4fe", features = ["integer", "x86_64-unix"] }
 
 [target.aarch64-unknown-linux-gnu.dependencies]
-tfhe = { version = "0.8.0", features = ["integer", "aarch64-unix"] }
+tfhe = { git = "https://github.com/zama-ai/tfhe-rs.git", rev = "483a4fe", features = ["integer", "aarch64-unix"] }
 
 [target.x86_64-pc-windows-gnu.dependencies]
-tfhe = { version = "0.8.0", features = ["integer", "x86_64"] }
+tfhe = { git = "https://github.com/zama-ai/tfhe-rs.git", rev = "483a4fe", features = ["integer", "x86_64"] }
